Bug 1277405: Clear Places observers at XPCOM shutdown. r=mak

MozReview-Commit-ID: 6JYMX7TXDLZ